--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "faster-whisper>=0.10.0",
     "openai>=1.3.0",
     "packaging>=23.0",
+    "PyQt6>=6.5.0",
 ]
 
 [project.optional-dependencies]
