--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires-python = ">=3.8"
 keywords = ["voice", "speech", "transcription", "whisper", "text-to-speech", "hotkey", "productivity"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
-    "Environment :: Desktop Environment",
+    "Environment :: X11 Applications",
     "Intended Audience :: End Users/Desktop",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
@@ -38,6 +38,7 @@ dependencies = [
     "openai>=1.3.0",
     "packaging>=23.0",
     "PyQt6>=6.5.0",
+    "requests>=2.31.0",
 ]
 
 [project.optional-dependencies]
